--- a/src/components/views/blog/Blog.scss
+++ b/src/components/views/blog/Blog.scss
@@ -1,4 +1,5 @@
 .blog-container {
+  min-height: 600px;
   .header {
     padding: 20px 0px 40px 0px;
     text-align: center;
@@ -78,6 +79,13 @@
     align-items: center;
     justify-content: center;
     padding: 50px 0px;
+  }
+
+  .no-blog {
+    color: red;
+    text-align: center;
+    padding: 100px;
+    font-weight: 600;
   }
 }
 
