blog design fixed

--- a/src/components/views/blog/Blog.scss
+++ b/src/components/views/blog/Blog.scss
@@ -41,7 +41,7 @@
           color: #414141;
           font-weight: 700;
           font-size: 1.25rem;
-          text-align: justify;
+          text-align: left;
 
           overflow: hidden;
           text-overflow: ellipsis;
